[project]
name = "narb-research"
version = "0.1.0"
description = "A research aimed at indexing a catalog of National Archive of Belarus (NARB)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "marimo[lsp]>=0.14.15",
    "openai>=1.98.0",
    "python-lsp-server>=1.13.0",
    "requests>=2.32.4",
    "ruff>=0.12.7",
]
